--- a/client/src/components/Navbar/Navbar.module.scss
+++ b/client/src/components/Navbar/Navbar.module.scss
@@ -19,7 +19,9 @@
     transform: scale(0.8);
     margin-right: -6px;
     opacity: 0.5;
-    transition: 0.2s ease-in-out;
+    transition: transform, padding, margin, opacity, color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
 
     h3 {
         font-size: 16px;
@@ -52,7 +54,9 @@
     transform: scale(1);
     margin-right: 0px;
     opacity: 1;
-    transition: 0.2s ease-in-out;
+    transition: transform, padding, margin, opacity, color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
 
     h3 {
         font-size: 24px;
